--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
   },
   "dependencies": {
     "gulp-htmlmin": "^5.0.1",
+    "ion-rangeslider": "^2.3.0",
     "jquery": "^3.3.1",
     "jquery-countdown": "^2.2.0",
+    "rangeslider.js": "^2.3.2",
     "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
     "vanilla-text-mask": "^5.1.1",
