--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ion-rangeslider": "^2.3.0",
     "jquery": "^3.3.1",
     "jquery-countdown": "^2.2.0",
+    "jquery-ui": "^1.12.1",
     "rangeslider.js": "^2.3.2",
     "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
