--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jquery-countdown": "^2.2.0",
     "jquery-ui": "^1.12.1",
     "jquery-ui-dist": "^1.12.1",
+    "owl.carousel": "^2.3.4",
     "rangeslider.js": "^2.3.2",
     "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
